// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`.not.toContainAnyEntries > fails when given object contains atleast one of the given entries 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).not.toContainAnyEntries([22m[32mexpected[39m[2m)[22m

Expected object to not contain any of the provided entries:
  [32mArray [
  Array [
    \\"a\\",
    \\"qux\\",
  ],
  Array [
    \\"a\\",
    \\"foo\\",
  ],
][39m
Received:
  [31mObject {
  \\"a\\": \\"foo\\",
  \\"b\\": \\"bar\\",
  \\"c\\": \\"baz\\",
}[39m"
`;

exports[`.toContainAnyEntries > fails when given object does not contain any of the given entries 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).toContainAnyEntries([22m[32mexpected[39m[2m)[22m

Expected object to contain any of the provided entries:
  [32mArray [
  Array [
    \\"a\\",
    \\"qux\\",
  ],
  Array [
    \\"b\\",
    \\"foo\\",
  ],
][39m
Received:
  [31mObject {
  \\"a\\": \\"foo\\",
  \\"b\\": \\"bar\\",
  \\"c\\": \\"baz\\",
}[39m"
`;
